Fix FAM z-index issue

--- a/css/fusioncss.bluegrey.red.css
+++ b/css/fusioncss.bluegrey.red.css
@@ -2010,6 +2010,7 @@ body.disableScroll {
 .fam {
   position: relative;
   display: inline-block;
+  z-index: 9000;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
