--- a/less/fam.less
+++ b/less/fam.less
@@ -1,9 +1,7 @@
 .fam {
 	position: relative;
 	display: inline-block;
-	a:fist-child {
-		z-index: 9000;
-	}
+	z-index: 9000;
 	.user-select();
 
 
@@ -15,7 +13,6 @@
 		margin-left: 0;
 		margin-bottom: 0;
 		width: 23.5rem;
-		z-index: 9010;
 		opacity: 0;
 		visibility: hidden;
 		.transition(all, 250ms);
